AUGREL/src/objects/Form_Field__c.object
<CustomObject>
    <description>Represents fields that appear on forms in the Adobe Forms Service. The columns identify source objects and fields, the target field on Document Request, and special processing instructions.</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DependantService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DependantService</label>
        <referenceTo>FromServices__c</referenceTo>
        <relationshipLabel>Form Fields (DependantService)</relationshipLabel>
        <relationshipName>Form_Fields1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Property__c</fullName>
        <description>Map this value to WS node</description>
        <label>Desired Property</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Service</label>
        <referenceTo>FromServices__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>Form_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forms_Logic_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forms Logic Configuration</label>
        <referenceTo>Forms_LogicConfiguration__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>Form_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forms_QueryConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forms_QueryConfig</label>
        <referenceTo>Forms_QueryConfig__c</referenceTo>
        <relationshipLabel>Form Fields</relationshipLabel>
        <relationshipName>Form_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Input_Fields__c</fullName>
        <label>Input Fields</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Service_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will hold true if field is input parameter to service or false.</description>
        <label>Is Service Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMigrationID__c</fullName>
        <formula>Forms_Logic_Config__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_item_field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Checkbox to indicate whether field has multiplicity property and needs to be represented in document request line item.</description>
        <label>Line item field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_item_type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Picklist for multiplicity fields to group together on one line item record when in the same node - value maps to Type field on document request line item.</description>
        <label>Line item type</label>
        <picklist>
            <controllingField>Line_item_field__c</controllingField>
            <picklistValues>
                <fullName>Co-Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Type</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Arbitrary unique number assigned to the record to facilitate migration of metadata between environments.</description>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_FAC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Indicates if the field should always reference the primary borrower or the current FAC.</description>
        <inlineHelpText>If checked the primary borrower&apos;s record (FAC) is always used to fill in this field.</inlineHelpText>
        <label>Primary FAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QMigrationID__c</fullName>
        <formula>Forms_QueryConfig__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMigrationID__c</fullName>
        <formula>Form_Service__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The source field from which the data should be fetched.</description>
        <label>Source Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The source object from which the data should be fetched.</description>
        <label>Source Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>ALFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADOBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The target field on the document request record or line item where the data will be stored.</description>
        <label>Target Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_DestinationNode__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The node in the forms WSDL to which the field belongs.</description>
        <inlineHelpText>Object Notation of child nodes of the soap envelope beneath the &quot;LCForms&quot; level.  e.g. Request.CreationDate.
IF this is a 1:many, then instead of dot notation, use a pipe &apos;|&apos; after property that denotes a &apos;many object&apos;.  e.g. req.node.addys|addy.state</inlineHelpText>
        <label>WS_DestinationNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Sequence__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The node sequence as defined in the forms WSDL.</description>
        <label>WS_Sequence</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Form Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source_Object__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Target_Field__c</columns>
        <columns>Primary_FAC__c</columns>
        <columns>WS_DestinationNode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>